Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-92110

[REG 5.15.2 -> 5.15.3] Failing CHECK on lichess related to createWindow

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.15.3
    • WebEngine
    • None
    • 79fbaa227944921584dd13563ecf36147f8b0616 (qt/qtwebengine-chromium/87-based) b3aa1c9144e33cdb8711bc61b50b76459b000b1c (qt/qtwebengine-chromium/88-based) da1598a7ada1f165f854f7768fb47a0e3f38aeb8 (qt/qtwebengine-chromium/90-based)

    Description

      When opening https://lichess.org/zk44wv1m and Ctrl-clicking the DrNykterstein profile link:

      it crashes with a fatal CHECK (i.e. affecting release builds as well):

      [133132:133132:0324/203856.569963:FATAL:render_frame_host_manager.cc(2068)] Check failed: descriptor.relation != SiteInstanceRelation::RELATED || current_instance->IsCoopCoepCrossOriginIsolated() == descriptor.is_coop_coep_cross_origin_isolated. 
      

      Stack:

      #0 0x7f89a6f0ae2f base::debug::CollectStackTrace()
      #1 0x7f89a6d33f13 base::debug::StackTrace::StackTrace()
      #2 0x7f89a6d33eca base::debug::StackTrace::StackTrace()
      #3 0x7f89a6d10d9e logging::LogMessage::~LogMessage()
      #4 0x7f89a6d11508 logging::LogMessage::~LogMessage()
      #5 0x7f89a6d18e2d logging::CheckError::~CheckError()
      #6 0x7f89ad75b00b content::RenderFrameHostManager::ConvertToSiteInstance()
      #7 0x7f89ad75971a content::RenderFrameHostManager::GetSiteInstanceForNavigation()
      #8 0x7f89ad75d1d2 content::RenderFrameHostManager::GetSiteInstanceForNavigationRequest()
      #9 0x7f89ad7563a8 content::RenderFrameHostManager::GetFrameHostForNavigation()
      #10 0x7f89ad756001 content::RenderFrameHostManager::DidCreateNavigationRequest()
      #11 0x7f89ad0fc85d content::FrameTreeNode::CreatedNavigationRequest()
      #12 0x7f89ad306ea8 content::Navigator::Navigate()
      #13 0x7f89ad1c2100 content::NavigationControllerImpl::NavigateWithoutEntry()
      #14 0x7f89ad1b71cd content::NavigationControllerImpl::LoadURLWithParams()
      #15 0x7f89a0726e55 QtWebEngineCore::WebContentsDelegateQt::OpenURLFromTab()
      #16 0x7f89ade1fdf8 content::WebContentsImpl::OpenURL()
      #17 0x7f89ad3074a3 content::Navigator::RequestOpenURL()
      #18 0x7f89ad32455f content::RenderFrameHostImpl::OpenURL()
      #19 0x7f89a2d6389c content::mojom::FrameHostStubDispatch::Accept()
      #20 0x7f89ad390555 content::mojom::FrameHostStub<>::Accept()
      #21 0x7f89a7ce45a1 mojo::InterfaceEndpointClient::HandleValidatedMessage()
      #22 0x7f89a7ce2211 mojo::InterfaceEndpointClient::HandleIncomingMessageThunk::Accept()
      #23 0x7f89a7cf3a45 mojo::MessageDispatcher::Accept()
      #24 0x7f89a7ce35c7 mojo::InterfaceEndpointClient::HandleIncomingMessage()
      ...
      

      The failing check is commented with:

      If we are asked to return a related SiteInstance but the BrowsingInstance has a different cross_origin_isolated state, something went wrong.

      Attachments

        For Gerrit Dashboard: QTBUG-92110
        # Subject Branch Project Status CR V

        Activity

          People

            qt_webengine_team Qt WebEngine Team
            the compiler Florian Bruhin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes