Avoid crashing on new window in cross-origin isolated content

The case seems to trigger if the opener is coop-coep-cross-origin-
isolated, the load is speculative, site-related and not (yet) similarly
isolated.

The latter might be a separate/underlying bug though

Change-Id: I9aacc1611ececc91425efe8a1c84ea941b575669
Fixes: QTBUG-92110
Reviewed-by: Jüri Valdmann <juri.valdmann@qt.io>